@@ -1,0 +1,9 @@
+[[!comment format=mdwn
+ username="joey"
+ subject="""comment 9"""
+ date="2016-09-29T20:58:13Z"
+ content="""
+Gone ahead and made --json-progress be displayed when size is not known,
+although of course it then has to omit the total-size and percent-progress
+fields.
+"""]]
