@@ -7,6 +7,8 @@ git-annex (6.20160924) UNRELEASED; urgency=medium
     "git-annex find --in remote" by over 50%.
   * Optimised git-annex branch log file timestamp parsing.
   * Add "total-size" field to --json-progress output.
+  * Make --json-progress output be shown even when the size of a object
+    is not known.
 
  -- Joey Hess <id@joeyh.name>  Mon, 26 Sep 2016 16:46:19 -0400
 
